# maestro

./: .env.example  .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  CALIBRATION_SESSION.md  CLAUDE.md  CLAUDE_PIPELINE.md  CLAUDE_SCHEMA.md  DETAILED.md  FOUNDATION.md  GEMINI.md  INSTRUCTIONS.md  Launcher.bat  MCP_PROPOSAL.md  MID_PROBLEM.md  PLAN.md  PLANNING_PIPELINE_FIX.md  PLAN_OF_ACTION.md  PLAN_SUBMIT_WORK.md  PLAN_SUBMIT_WORK_MIGRATION.md  PRD.md  README.md  RUNBOOK.md  SCHEDULER_BUG.md  STAGES_PROGRESS.md  SUMMARY.md  WATCH_FOR.md  check_db.py  check_idea.py  check_idea_sqla.py  check_locks.py  check_maestro_stall.py  check_mcp_list.py  check_mcp_tools.py  config.py  dags.py  debug_integration.py  debug_test.py  diagnose_story.py  (+28 more)
.claude/: settings.local.json
.gemini/: settings.json
.maestro/: task_dag.json
app/: database.py  logging_config.py  main.py
docs/: PIPELINE_SOFTWARE_DEV_FLOW.md  kanban-ui-wireframes.md
mcp_tools/: actions.py  diagnostics.py  helpers.py  monitor.py
plans/: FOUNDATION.md  GAP_10_MODEL_ROUTING.md  GAP_11_TRAINING_PIPELINE.md  GAP_12_LEAN4_PROOF_DEPTH.md  GAP_1_CONSULT_MAESTRO.md  GAP_2_MISSION_AUTOPILOT.md  GAP_3_MATH_PROOF_TOOLING.md  GAP_4_GOAL_MEMORY.md  GAP_5_SELF_MODIFICATION.md  GAP_6_REFLECTION_AGENT.md  GAP_7_EPISODIC_MEMORY.md  GAP_8_INTER_AGENT_COMMS.md  GAP_9_EVENT_TRIGGERS.md  MAESTRO_EVOLUTION.md  MALLEABLE_PIPELINES.md  MCP_PROPOSAL.md  OPERATION_FURY.md  PHASE_10_TEMPLATES_GALLERY.md  PHASE_11_LIVE_STREAMING.md  PHASE_1_DATA_MODEL.md  PHASE_2_SCHEDULER_DECOUPLING.md  PHASE_3_PIPELINE_CRUD_API.md  PLAN_TESTS.md  (+10 more)
(+410 files in other folders)
